# 42_fillit

./: CMakeLists.txt  Makefile  author  fillit.h  newtet.c  starter.c
FILL2.0/: CMakeLists.txt  Makefile  a.out  fillit  fillit.h  ft_starter.c  logic2.c  main.c  newtet.c  test  valid1.c
FILL2.0/a.out.dSYM/Contents/Resources/DWARF/: a.out
FILL2.0/libft/: Makefile  ft_matcp.c  ft_matdel.c  ft_putmat.c  libft.h
FILL2.0/srcs/: a.out  fillit.h  fillit.h.gch  ft_starter.c  logic2.c  main.c  newtet.c  searchxy.c  test  valid1.c
FILL2.0/srcs/a.out.dSYM/Contents/Resources/DWARF/: a.out
FILL2.0/untitled folder/: 1231.c  cc.c
FILL2.0/untitled folder/libft/: ft_atoi.c  ft_bzero.c  ft_itoa.c  ft_lstdel.c  ft_lstmap.c  ft_memccpy.c  ft_memset.c  ft_putendl_fd.c  ft_putmat.c  ft_strclr.c  ft_strcpy.c  ft_strdel.c  ft_strmap.c  ft_strmapi.c  ft_strncpy.c  ft_strnstr.c  ft_strsplit.c  ft_toupper.c
FILL2.0/untitled folder/libft/include/: libft.h
fillit/: fillit.h  logic.c  torch.c
fillit/srcs/: Makefile
fillit_test_variant_s_bagami/: Makefile  fillit.h  logic.c  main.c  newtet.c  searchxy.c  torch.c  valid1.c
fillit_test_variant_s_bagami/libft/: ft_matcp.c  get_next_line.c  libft.h
libft/: Makefile  ft_matcp.c  ft_matdel.c  ft_memalloc.c  ft_putmat.c  libft.h
srcs/: fillit.h  ft_starter.c  logic.c  logic2.c  newtet.c  searchxy.c  valid.c
valid/: CMakeLists.txt  Makefile  fillit  testone
valid/libft/: Makefile  ft_countptr.c  ft_cpyptrn.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_lstadd.c  ft_lstdelone.c  ft_lstiter.c  ft_pow.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_strchr.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strnequ.c  ft_strsplitc.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_strtrims.c
valid/libft/include/: libft.h
valid/srcs/: .algm.c.swp  .algm2.c.swp  .testone.swp  a.out  algm.c  algm2.c  example  fillit.h  main.c  newtet.c  searchxy.c  test  testone  valid1.c
validv2/libft/: Makefile  ft_isalnum.c  ft_isdigit.c  ft_lstnew.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_putchar.c  ft_putendl.c  ft_putnbr.c  ft_putsstr.c  ft_strcat.c  ft_strcmp.c  ft_striteri.c  ft_strncat.c  ft_strncmp.c  ft_strnew.c  ft_strrchr.c  ft_tolower.c  get_next_line.c
validv2/libft/include/: libft.h
validv2/srcs/: a.out  main.c  newtet.c  searchxy.c
