cmake_minimum_required(VERSION 3.14)
project(ando C)

set(CMAKE_C_STANDARD 11)

include_directories(FILL2.0)
include_directories(FILL2.0/libft)
include_directories(fillit)
include_directories(fillit_test_variant_s_bagami)
include_directories(fillit_test_variant_s_bagami/libft)
include_directories(libft)
include_directories(valid/libft/include)

add_executable(ando
        FILL2.0/libft/ft_alpdown.c
        FILL2.0/libft/ft_alpup.c
        FILL2.0/libft/ft_atoi.c
        FILL2.0/libft/ft_bzero.c
        FILL2.0/libft/ft_cu_wards.c
        FILL2.0/libft/ft_isalnum.c
        FILL2.0/libft/ft_isalpha.c
        FILL2.0/libft/ft_isascii.c
        FILL2.0/libft/ft_isdigit.c
        FILL2.0/libft/ft_isprint.c
        FILL2.0/libft/ft_itoa.c
        FILL2.0/libft/ft_lstadd.c
        FILL2.0/libft/ft_lstdel.c
        FILL2.0/libft/ft_lstdelone.c
        FILL2.0/libft/ft_lstiter.c
        FILL2.0/libft/ft_lstmap.c
        FILL2.0/libft/ft_lstnelem.c
        FILL2.0/libft/ft_lstnew.c
        FILL2.0/libft/ft_matcp.c
        FILL2.0/libft/ft_matdel.c
        FILL2.0/libft/ft_memalloc.c
        FILL2.0/libft/ft_memccpy.c
        FILL2.0/libft/ft_memchr.c
        FILL2.0/libft/ft_memcmp.c
        FILL2.0/libft/ft_memcpy.c
        FILL2.0/libft/ft_memdel.c
        FILL2.0/libft/ft_memmove.c
        FILL2.0/libft/ft_memset.c
        FILL2.0/libft/ft_pow.c
        FILL2.0/libft/ft_putchar.c
        FILL2.0/libft/ft_putchar_fd.c
        FILL2.0/libft/ft_putendl.c
        FILL2.0/libft/ft_putendl_fd.c
        FILL2.0/libft/ft_putmat.c
        FILL2.0/libft/ft_putnbr.c
        FILL2.0/libft/ft_putnbr_fd.c
        FILL2.0/libft/ft_putstr.c
        FILL2.0/libft/ft_putstr_fd.c
        FILL2.0/libft/ft_sqrt.c
        FILL2.0/libft/ft_strcat.c
        FILL2.0/libft/ft_strchr.c
        FILL2.0/libft/ft_strclr.c
        FILL2.0/libft/ft_strcmp.c
        FILL2.0/libft/ft_strcpy.c
        FILL2.0/libft/ft_strdel.c
        FILL2.0/libft/ft_strdup.c
        FILL2.0/libft/ft_strequ.c
        FILL2.0/libft/ft_striter.c
        FILL2.0/libft/ft_striteri.c
        FILL2.0/libft/ft_strjoin.c
        FILL2.0/libft/ft_strlcat.c
        FILL2.0/libft/ft_strlen.c
        FILL2.0/libft/ft_strmap.c
        FILL2.0/libft/ft_strmapi.c
        FILL2.0/libft/ft_strncat.c
        FILL2.0/libft/ft_strncmp.c
        FILL2.0/libft/ft_strncpy.c
        FILL2.0/libft/ft_strndup.c
        FILL2.0/libft/ft_strnequ.c
        FILL2.0/libft/ft_strnew.c
        FILL2.0/libft/ft_strnstr.c
        FILL2.0/libft/ft_strrchr.c
        FILL2.0/libft/ft_strsplit.c
        FILL2.0/libft/ft_strstr.c
        FILL2.0/libft/ft_strsub.c
        FILL2.0/libft/ft_strtrim.c
        FILL2.0/libft/ft_tolower.c
        FILL2.0/libft/ft_toupper.c
        FILL2.0/libft/get_next_line.c
        FILL2.0/libft/libft.h
        FILL2.0/fillit.h
        FILL2.0/ft_starter.c
        FILL2.0/logic2.c
        FILL2.0/main.c
        FILL2.0/newtet.c
        FILL2.0/searchxy.c
        FILL2.0/valid1.c
        fillit/fillit.h
        fillit/logic.c
        fillit/torch.c
        fillit_test_variant_s_bagami/libft/ft_alpdown.c
        fillit_test_variant_s_bagami/libft/ft_alpup.c
        fillit_test_variant_s_bagami/libft/ft_atoi.c
        fillit_test_variant_s_bagami/libft/ft_bzero.c
        fillit_test_variant_s_bagami/libft/ft_cu_wards.c
        fillit_test_variant_s_bagami/libft/ft_isalnum.c
        fillit_test_variant_s_bagami/libft/ft_isalpha.c
        fillit_test_variant_s_bagami/libft/ft_isascii.c
        fillit_test_variant_s_bagami/libft/ft_isdigit.c
        fillit_test_variant_s_bagami/libft/ft_isprint.c
        fillit_test_variant_s_bagami/libft/ft_itoa.c
        fillit_test_variant_s_bagami/libft/ft_lstadd.c
        fillit_test_variant_s_bagami/libft/ft_lstdel.c
        fillit_test_variant_s_bagami/libft/ft_lstdelone.c
        fillit_test_variant_s_bagami/libft/ft_lstiter.c
        fillit_test_variant_s_bagami/libft/ft_lstmap.c
        fillit_test_variant_s_bagami/libft/ft_lstnelem.c
        fillit_test_variant_s_bagami/libft/ft_lstnew.c
        fillit_test_variant_s_bagami/libft/ft_matcp.c
        fillit_test_variant_s_bagami/libft/ft_matdel.c
        fillit_test_variant_s_bagami/libft/ft_memalloc.c
        fillit_test_variant_s_bagami/libft/ft_memccpy.c
        fillit_test_variant_s_bagami/libft/ft_memchr.c
        fillit_test_variant_s_bagami/libft/ft_memcmp.c
        fillit_test_variant_s_bagami/libft/ft_memcpy.c
        fillit_test_variant_s_bagami/libft/ft_memdel.c
        fillit_test_variant_s_bagami/libft/ft_memmove.c
        fillit_test_variant_s_bagami/libft/ft_memset.c
        fillit_test_variant_s_bagami/libft/ft_pow.c
        fillit_test_variant_s_bagami/libft/ft_putchar.c
        fillit_test_variant_s_bagami/libft/ft_putchar_fd.c
        fillit_test_variant_s_bagami/libft/ft_putendl.c
        fillit_test_variant_s_bagami/libft/ft_putendl_fd.c
        fillit_test_variant_s_bagami/libft/ft_putmat.c
        fillit_test_variant_s_bagami/libft/ft_putnbr.c
        fillit_test_variant_s_bagami/libft/ft_putnbr_fd.c
        fillit_test_variant_s_bagami/libft/ft_putstr.c
        fillit_test_variant_s_bagami/libft/ft_putstr_fd.c
        fillit_test_variant_s_bagami/libft/ft_sqrt.c
        fillit_test_variant_s_bagami/libft/ft_strcat.c
        fillit_test_variant_s_bagami/libft/ft_strchr.c
        fillit_test_variant_s_bagami/libft/ft_strclr.c
        fillit_test_variant_s_bagami/libft/ft_strcmp.c
        fillit_test_variant_s_bagami/libft/ft_strcpy.c
        fillit_test_variant_s_bagami/libft/ft_strdel.c
        fillit_test_variant_s_bagami/libft/ft_strdup.c
        fillit_test_variant_s_bagami/libft/ft_strequ.c
        fillit_test_variant_s_bagami/libft/ft_striter.c
        fillit_test_variant_s_bagami/libft/ft_striteri.c
        fillit_test_variant_s_bagami/libft/ft_strjoin.c
        fillit_test_variant_s_bagami/libft/ft_strlcat.c
        fillit_test_variant_s_bagami/libft/ft_strlen.c
        fillit_test_variant_s_bagami/libft/ft_strmap.c
        fillit_test_variant_s_bagami/libft/ft_strmapi.c
        fillit_test_variant_s_bagami/libft/ft_strncat.c
        fillit_test_variant_s_bagami/libft/ft_strncmp.c
        fillit_test_variant_s_bagami/libft/ft_strncpy.c
        fillit_test_variant_s_bagami/libft/ft_strndup.c
        fillit_test_variant_s_bagami/libft/ft_strnequ.c
        fillit_test_variant_s_bagami/libft/ft_strnew.c
        fillit_test_variant_s_bagami/libft/ft_strnstr.c
        fillit_test_variant_s_bagami/libft/ft_strrchr.c
        fillit_test_variant_s_bagami/libft/ft_strsplit.c
        fillit_test_variant_s_bagami/libft/ft_strstr.c
        fillit_test_variant_s_bagami/libft/ft_strsub.c
        fillit_test_variant_s_bagami/libft/ft_strtrim.c
        fillit_test_variant_s_bagami/libft/ft_tolower.c
        fillit_test_variant_s_bagami/libft/ft_toupper.c
        fillit_test_variant_s_bagami/libft/get_next_line.c
        fillit_test_variant_s_bagami/libft/libft.h
        fillit_test_variant_s_bagami/fillit.h
        fillit_test_variant_s_bagami/logic.c
        fillit_test_variant_s_bagami/main.c
        fillit_test_variant_s_bagami/newtet.c
        fillit_test_variant_s_bagami/searchxy.c
        fillit_test_variant_s_bagami/torch.c
        fillit_test_variant_s_bagami/valid1.c
        libft/ft_alpdown.c
        libft/ft_alpup.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_cu_wards.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnelem.c
        libft/ft_lstnew.c
        libft/ft_matcp.c
        libft/ft_matdel.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putmat.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/libft.h
        valid/libft/include/libft.h
        valid/libft/ft_atoi.c
        valid/libft/ft_bzero.c
        valid/libft/ft_isalnum.c
        valid/libft/ft_isalpha.c
        valid/libft/ft_isascii.c
        valid/libft/ft_isdigit.c
        valid/libft/ft_isprint.c
        valid/libft/ft_itoa.c
        valid/libft/ft_lstadd.c
        valid/libft/ft_lstdel.c
        valid/libft/ft_lstdelone.c
        valid/libft/ft_lstiter.c
        valid/libft/ft_lstmap.c
        valid/libft/ft_lstnew.c
        valid/libft/ft_memalloc.c
        valid/libft/ft_memccpy.c
        valid/libft/ft_memchr.c
        valid/libft/ft_memcmp.c
        valid/libft/ft_memcpy.c
        valid/libft/ft_memdel.c
        valid/libft/ft_memmove.c
        valid/libft/ft_memset.c
        valid/libft/ft_putchar.c
        valid/libft/ft_putchar_fd.c
        valid/libft/ft_putendl.c
        valid/libft/ft_putendl_fd.c
        valid/libft/ft_putnbr.c
        valid/libft/ft_putnbr_fd.c
        valid/libft/ft_putsstr.c
        valid/libft/ft_putstr.c
        valid/libft/ft_putstr_fd.c
        valid/libft/ft_strcat.c
        valid/libft/ft_strchr.c
        valid/libft/ft_strclr.c
        valid/libft/ft_strcmp.c
        valid/libft/ft_strcpy.c
        valid/libft/ft_strdel.c
        valid/libft/ft_strdup.c
        valid/libft/ft_strequ.c
        valid/libft/ft_striter.c
        valid/libft/ft_striteri.c
        valid/libft/ft_strjoin.c
        valid/libft/ft_strlcat.c
        valid/libft/ft_strlen.c
        valid/libft/ft_strmap.c
        valid/libft/ft_strmapi.c
        valid/libft/ft_strncat.c
        valid/libft/ft_strncmp.c
        valid/libft/ft_strncpy.c
        valid/libft/ft_strnequ.c
        valid/libft/ft_strnew.c
        valid/libft/ft_strnstr.c
        valid/libft/ft_strrchr.c
        valid/libft/ft_strsplit.c
        valid/libft/ft_strstr.c
        valid/libft/ft_strsub.c
        valid/libft/ft_strtrim.c
        valid/libft/ft_strtrims.c
        valid/libft/ft_tolower.c
        valid/libft/ft_toupper.c
        valid/libft/get_next_line.c
        valid/srcs/main.c
        valid/srcs/newtet.c
        valid/srcs/searchxy.c
        valid/srcs/valid1.c)
